# freeDiameter

./: .dir-locals.el  .gitignore  .hgignore  CMakeLists.txt  CTestConfig.cmake  INSTALL  INSTALL.Fedora  INSTALL.FreeBSD  INSTALL.OSX  INSTALL.OpenSUSE  INSTALL.Ubuntu  INSTALL.pkgsrc  LICENSE  NEWS  README
extensions/: CMakeLists.txt
extensions/_sample/: CMakeLists.txt  fini.c  hello.cpp  sample.c
extensions/acl_wl/: CMakeLists.txt  acl_wl.c  acl_wl.h  aw_conf.l  aw_conf.y  aw_tree.c
extensions/app_acct/: CMakeLists.txt  acct_conf.l  acct_conf.y  acct_db.c  acct_records.c  app_acct.c  app_acct.h
extensions/app_diameap/: CMakeLists.txt  README  diameap.c  diameap.h  diameap.l  diameap.sql  diameap.y  diameap_common.h  diameap_eap.c  diameap_eap.h  diameap_eappacket.c  diameap_eappacket.h  diameap_init.c  diameap_init.h  diameap_mysql.c  diameap_mysql.h  diameap_plugins.c  diameap_server.c  diameap_server.h  diameap_tls.c  diameap_tls.h  diameap_user.c  diameap_user.h  libcrypt.c  libcrypt.h  libdiameap.h  plugins.h
extensions/app_radgw/: CMakeLists.txt  hostap_compat.h  md5.c  md5.h  radius.c  radius.h  rgw.h  rgw_clients.c  rgw_common.h  rgw_conf.l  rgw_conf.y  rgw_main.c  rgw_msg.c  rgw_msg_attrtype.c  rgw_msg_codes.c  rgw_plugins.c  rgw_servers.c  rgw_worker.c  rgwx_acct.c  rgwx_auth.c  rgwx_debug.c  rgwx_echodrop.c  rgwx_echodrop.h  rgwx_echodrop.l  rgwx_echodrop.y  rgwx_sample.c  rgwx_sip.c
extensions/app_redirect/: CMakeLists.txt  app_redir.c  app_redir.h  ard-host.h.in  ard_conf.l  ard_conf.y  ard_rules.c
extensions/app_sip/: CMakeLists.txt  TODO  app_sip.c  app_sip.h  app_sip.l  app_sip.y  diamsip.c  diamsip.h  diamsip.l  diamsip.y  libapp_sip.c  libdiamsip.c  locationinfo.c  locationinfosl.c  md5.c  md5.h  multimediaauth.c  pushprofile.c  registrationtermination.c  serverassignment.c  userauthorization.c
extensions/app_test/: CMakeLists.txt  app_test.c  app_test.h  atst_cli.c  atst_conf.l  atst_conf.y  atst_dict.c  atst_serv.c  atst_sig.c
extensions/dbg_dict_dump/: CMakeLists.txt  dbg_dict_dump.c
extensions/dbg_dict_dump_json/: CMakeLists.txt  dbg_dict_dump_json.cc
extensions/dbg_interactive/: CMakeLists.txt  dbg_interactive.c  dbg_interactive.i  dictionary.i  dispatch.i  diwrap.i  endpoints.i  events.i  lists.i  messages.i  peers.i  posix.i  queues.i  routing.i  sessions.i
extensions/dbg_loglevel/: CMakeLists.txt  dbg_loglevel.c  dbg_loglevel.h  dbg_loglevel_conf.l  dbg_loglevel_conf.y
extensions/dbg_monitor/: CMakeLists.txt  dbg_monitor.c  monitor.c
extensions/dbg_msg_dumps/: dbg_msg_dumps.c
extensions/dbg_msg_timings/: dbg_msg_timings.c
extensions/dbg_peers/: CMakeLists.txt  HowTo.md  dbg_peers.c  dbg_peers_config.c  dbg_peers_config.h
extensions/dbg_rt/: CMakeLists.txt  dbg_rt.c
extensions/dict_dcca/: CMakeLists.txt  dict_dcca.c
extensions/dict_dcca_3gpp/: CMakeLists.txt  add_avps.c  dict_dcca_3gpp.c  dict_dcca_3gpp.csv  dict_dcca_3gpp.org
extensions/dict_dcca_starent/: CMakeLists.txt  add_avps.c  dict_dcca_starent.c  dict_dcca_starent.csv  dict_dcca_starent.org
extensions/dict_eap/: CMakeLists.txt  dict_eap.c
extensions/dict_json/: CMakeLists.txt  dict-json-diff.cc  dict_json.cc  dict_json_dict_schema.cc  dict_json_dict_schema.json  json-schema-to-c.cc
extensions/dict_legacy_xml/: CMakeLists.txt  dict_lxml.c  dict_lxml.h  dict_lxml.l  dict_lxml.y  dict_lxml_xml.c
extensions/dict_mip6a/: CMakeLists.txt  dict_mip6a.c
extensions/dict_mip6i/: CMakeLists.txt  dict_mip6i.c
extensions/dict_nas_mipv6/: CMakeLists.txt  dict_nas_mipv6.c
extensions/dict_nasreq/: CMakeLists.txt  dict_nasreq.c
extensions/dict_rfc5777/: dict_rfc5777.c
extensions/dict_sip/: CMakeLists.txt  dict_sip.c
extensions/loadtest_cc/: CMakeLists.txt  loadtest_cc.c
extensions/python_dra/: CMakeLists.txt  HowTo.md  python_dra.c  python_dra_config.c  python_dra_config.h  tests.py
extensions/rt_any/: CMakeLists.txt  rt_any.c
extensions/rt_busypeers/: CMakeLists.txt  rtbusy.c
extensions/rt_debug/: CMakeLists.txt  rt_debug.c
extensions/rt_default/: CMakeLists.txt  rt_default-host.h.in  rt_default.c  rt_default.h  rtd_conf.l  rtd_conf.y  rtd_rules.c
extensions/rt_deny_by_size/: CMakeLists.txt  rt_deny_by_size.c  rt_deny_by_size.h  rt_deny_by_size_conf.l  rt_deny_by_size_conf.y
extensions/rt_ereg/: rtereg.c  rtereg.h  rtereg_conf.l  rtereg_conf.y
extensions/rt_ignore_dh/: rt_ignore_dh.c
extensions/rt_load_balance/: rt_load_balance.c
extensions/rt_pyform/: CMakeLists.txt  HowTo.md  pyformer.c  pyformer.h  rt_pyform.c  rt_pyform_config.c  rt_pyform_config.h
extensions/rt_randomize/: rt_randomize.c
extensions/rt_redirect/: redir_entries.c  redir_expiry.c  redir_fwd.c  redir_out.c  rt_redir.c  rt_redir.h
extensions/rt_rewrite/: CMakeLists.txt  rt_rewrite.c  rt_rewrite.h  rt_rewrite_conf.l  rt_rewrite_conf.y  rt_rewrite_conf_support.c  rt_rewrite_conf_support.h
extensions/rt_un_number/: CMakeLists.txt  (+4 more)
freeDiameter/: CMakeLists.txt  apps.c  cnxctx.c  cnxctx.h  config.c  dict_base_proto.c  dispatch.c  endpoints.c  events.c  extensions.c  fD.h  fdd.l  fdd.y  main.c  messages.c  p_ce.c  p_cnx.c  p_dp.c  p_dw.c  p_expiry.c  p_out.c  p_psm.c  p_sr.c  peers.c  queues.c  routing.c  routing_dispatch.c  sctp.c  sctps.c  server.c  tcp.c
freeDiameterd/: CMakeLists.txt  main.c
freediameter/: CMakeLists.txt  dict_base_proto.c  fd.h  main.c
libfdproto/: CMakeLists.txt  dictionary-internal.h  dictionary.c  dictionary_functions.c  dispatch.c  fdproto-internal.h  fifo.c  init.c  lists.c  log.c  messages.c  msg_log.c  ostr.c  portability.c  rt_data.c  sessions.c  utils.c  version.c
libfreeDiameter/: CMakeLists.txt  dictionary.c  dispatch.c  fifo.c  init.c  libfD.h  lists.c  log.c  messages.c  mqueues.c  queues.c  rt_data.c  sessions.c  signal.c
libfreediameter/: CMakeLists.txt  dictionary.c  init.c  libfd.h  lists.c  log.c  messages.c  mqueues.c
tests/: CMakeLists.txt  testappacct.c  testcnx.c  testdict.c  testdisp.c  testfifo.c  testlist.c  testloadext.c  testmesg.c  testmesg_stress.c  testostr.c  testpeers.c  tests.h  testsctp.c  testsess.c
(+217 files in other folders)
